--- a/the-bounce-garden.html
+++ b/the-bounce-garden.html
@@ -123,19 +123,19 @@
       <div class="panel-body">
         <div class="controls" role="group" aria-label="Controls">
           <label>
-            Nota
+            Note
             <select id="noteSelect"></select>
           </label>
           <label>
-            Velocidad (rápida)
+            Speed
             <input id="speedInput" type="range" min="0.5" max="10" step="0.1" value="3.5">
           </label>
           <label>
-            Tamaño
+            Size
             <input id="sizeInput" type="range" min="6" max="22" step="1" value="11">
           </label>
           <label>
-            Duración (s)
+            Sustain
             <input id="durInput" type="range" min="0.1" max="12" step="0.1" value="4.0">
           </label>
           <label>
@@ -152,7 +152,7 @@
             </select>
           </label>
           <label style="min-width:190px;">
-            Volumen
+            Volume
             <input id="volumeInput" type="range" min="0" max="1" step="0.01" value="0.45">
           </label>
 
@@ -172,11 +172,9 @@
         </div>
 
         <div class="list" id="nodeList" aria-live="polite"></div>
-        <p class="muted">Tip: usa duraciones largas (≥4s) para drones suaves. Clic en el canvas para añadir rápidamente. Probá voices “kick/snare/hat” para texturas rítmicas.</p>
+        <p class="muted">Tip: use long durations (≥4 s) for soft drones. Click on the canvas to add quickly. Try “kick/snare/hat” voices for rhythmic textures.</p>
       </div>
     </details>
-
-    <p class="footer">Todo se ejecuta localmente. Sin dependencias. Compatible con dark/light y mobile.</p>
 
     <footer>
       <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer"
