--- a/index.html
+++ b/index.html
@@ -222,6 +222,25 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   </a>
 </li>
 
+<!-- MODAL ARCHITECT -->
+<li>
+  <a class="item" href="modal-architect.html">
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"
+         fill="none" stroke="currentColor" stroke-width="1.5"
+         stroke-linecap="round" stroke-linejoin="round">
+      <!-- base structure -->
+      <rect x="3" y="10" width="5" height="10" rx="0.8"></rect>
+      <rect x="10" y="6" width="4" height="14" rx="0.8"></rect>
+      <rect x="16" y="3" width="5" height="17" rx="0.8"></rect>
+      <!-- harmonic connection lines -->
+      <path d="M3 10 L10 6 L16 3" />
+      <path d="M8 20 L14 20 L21 20" />
+    </svg>
+    <span class="title">The Modal Architect</span>
+    <span class="meta">Design harmonic structures from scale geometry.</span>
+  </a>
+</li>
+
       </ul>
     </nav>
 
