--- a/modal-architect.html
+++ b/modal-architect.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Modal Architect — Contumance</title>
   <meta name="description" content="Design harmonic structures from scale geometry. Choose a mode, a root, write degrees, and craft playable guitar inversions." />
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>♪</text></svg>'>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>♪</text></svg>">
 
   <style>
     /* ---- Shared palette & rhythm (matches Daily Chord / Scales) ---- */
