--- a/modal-architect.html
+++ b/modal-architect.html
@@ -174,6 +174,24 @@
       <span class="note">Fuel the craft. Inspire the next page.</span>
       <span>© <span id="y"></span> Re:sonance <small class="byline">by <em>Contumance</em></small></span>
     </footer>
+    
+    <footer>
+  <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer"
+     aria-label="Support this library on Buy Me a Coffee">
+    <svg class="btn-icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M4 8h14.5a2 2 0 0 1 0 4H18l-1 5a4 4 0 0 1-3.95 3.3H8.95A4 4 0 0 1 5 17l-1-9z"/>
+      <path d="M3 8h17"/><path d="M7 4h6"/>
+    </svg>
+    <span>Buy me a coffee</span>
+  </a>
+
+  <!-- ✨ Nueva línea de dedicatoria -->
+  <span class="note">Concept inspired by <em>@nickitus</em>.</span>
+
+  <span class="note">Fuel the craft. Inspire the next page.</span>
+  <span>© <span id="y"></span> Re:sonance <small class="byline">by <em>Contumance</em></small></span>
+</footer>
+    
   </main>
 
   <!-- Theme toggle -->
