--- a/modal-architect.html
+++ b/modal-architect.html
@@ -123,11 +123,14 @@
       </nav>
       <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme" title="Toggle theme">🌓</button>
     </div>
-
+    
     <header>
-      <h1>The Modal Architect</h1>
-      <div class="subtitle">Design harmonic structures from scale geometry. Choose a mode, a root, write degrees, and pick inversions.</div>
-    </header>
+  <h1>The Modal Architect</h1>
+  <div class="subtitle">Design harmonic structures from scale geometry. Choose a mode, a root, write degrees, and pick inversions.</div>
+  <div class="note" style="font-size:0.85rem; color:var(--muted); margin-top:.25rem;">
+    Concept inspired by <em>@nickitus</em>.
+  </div>
+</header>
 
     <details class="panel" open>
       <summary>Controls</summary>
